--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/AdminAnalytics.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/AdminAnalytics.fxml
@@ -20,7 +20,7 @@
         <HBox prefHeight="65.0" prefWidth="1280.0" styleClass="top-container" BorderPane.alignment="CENTER">
             <children>
                 <AnchorPane prefHeight="60.0" prefWidth="230.0" />
-                <Text fill="#4a85f6" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading" text="User Dashboard">
+                <Text fill="#4a85f6" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading" text="Analytics Dashboard">
                     <HBox.margin>
                         <Insets top="20.0" />
                     </HBox.margin>
@@ -85,7 +85,7 @@
                 <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
                 <VBox layoutX="-1.0" layoutY="215.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="215.0">
                     <children>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0"  text="Home">
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Home">
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
